# jetson-gstreamer

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: stream.c  stream.cpp
